// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthLink renders Sign in link when authStatus is configuring 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-account__sign-in"
    data-testid="sign-in-link"
  >
    <a
      class="nhsuk-account__sign-in--link"
      href="/auth?redirect=%2Ftemplates%2Fcreate-and-submit-templates"
      id="sign-in-link"
    >
      Sign in
    </a>
  </div>
</DocumentFragment>
`;

exports[`AuthLink renders Sign in link when authStatus is unauthenticated 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-account__sign-in"
    data-testid="sign-in-link"
  >
    <a
      class="nhsuk-account__sign-in--link"
      href="/auth?redirect=%2Ftemplates%2Fcreate-and-submit-templates"
      id="sign-in-link"
    >
      Sign in
    </a>
  </div>
</DocumentFragment>
`;

exports[`AuthLink renders Sign out link when authStatus is authenticated 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-account__sign-in"
    data-testid="sign-in-link"
  >
    <a
      class="nhsuk-account__sign-in--link"
      href="/auth/signout?redirect=%2Ftemplates%2Fcreate-and-submit-templates"
      id="sign-out-link"
    >
      Sign out
    </a>
  </div>
</DocumentFragment>
`;
